# Gaussian-process-GPU

./: CMakeLists.txt  README.md  cudaMain.cu  main.cpp
gp/: conv.cu  conv.h  cudagp.cu  cudagp.h  cudagp_init.cu  kernels.cu  kernels.h  linalg.cu  linalog.h  utils_cuda.h
